--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-# pycharm stuff
+*#pycharm stuff
 .idea
 
-# Byte-compiled / optimized / DLL files
+! Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
@@ -113,4 +113,4 @@ ENV/
 *.DS_Store
 
 # VS Code workspace
-*.code-workspace
+*.code-workspace 
